# lllm-gateway

./: README.md
client/: bun.lockb  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/marketing/: layout.tsx  page.tsx
client/src/components/: BenchStrip.module.css  BenchStrip.tsx  FAQ.module.css  FAQ.tsx  Fallback.module.css  Fallback.tsx  FinalCTA.module.css  FinalCTA.tsx  Footer.module.css  Footer.tsx  Hero.module.css  Hero.tsx  Integration.module.css  Integration.tsx  Nav.module.css  Nav.tsx  PinSvg.tsx  Pipeline.module.css  Pipeline.tsx  Pricing.module.css  Pricing.tsx
client/src/components/charts/: LatencyChart.tsx  RequestVolumeChart.tsx  SpendChart.tsx  TokenBreakdown.tsx
client/src/components/dashboard/: ApiKeysClient.tsx  ApiKeysProvider.tsx  ApiKeysTable.tsx  CreateKeyModal.tsx  (+4 more)
client/src/context/: DashboardDataContext.tsx
client/src/lib/: constants.ts  mockData.ts  types.ts
client/src/store/: AppContext.tsx
llm-gateway/: .gitignore  Cargo.toml  handoff.md  system_design.md
llm-gateway/migrations/: 001_create_api_keys.sql  002_create_usage_records.sql  003_create_monthly_rollups.sql
llm-gateway/src/: config.rs  error.rs  main.rs  types.rs
llm-gateway/src/handlers/: handlers.rs  health.rs  mod.rs
llm-gateway/src/middleware/: auth.rs
llm-gateway/src/storage/: db.rs
sdk/: README.md  adapters.ts  client.test.ts  client.ts  errors.ts  index.ts  package-lock.json  package.json  streaming.test.ts  streaming.ts  tsconfig.json  tsconfig.types.json  types.ts
(+13 files in other folders)
