[package]
name = "llm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = "0.13.4"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
